[ppcrong.20180717][BLETOOLBOX] Starting layout and string implementation

--- a/app/src/main/res/layout/content_feature.xml
+++ b/app/src/main/res/layout/content_feature.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -9,13 +9,30 @@
     tools:context=".FeatureActivity"
     tools:showIn="@layout/activity_feature">
 
+    <android.support.v4.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <GridView
+            android:id="@+id/grid"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true"
+            android:cacheColorHint="@null"
+            android:columnWidth="@dimen/_80sdp"
+            android:horizontalSpacing="@dimen/_10sdp"
+            android:listSelector="@null"
+            android:numColumns="auto_fit"
+            android:paddingLeft="@dimen/_16sdp"
+            android:paddingRight="@dimen/_16sdp"
+            android:scrollbarStyle="outsideOverlay"
+            android:stretchMode="columnWidth"/>
+    </android.support.v4.widget.NestedScrollView>
+
     <TextView
+        android:id="@android:id/empty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
-
-</android.support.constraint.ConstraintLayout>
+        android:layout_centerInParent="true"
+        android:text="@string/no_apps"/>
+</RelativeLayout>
