[ppcrong.20180717][BLETOOLBOX] Add CSC and use RecyclerView to replace GridView

--- a/app/src/main/res/layout/content_feature.xml
+++ b/app/src/main/res/layout/content_feature.xml
@@ -9,30 +9,21 @@
     tools:context=".FeatureActivity"
     tools:showIn="@layout/activity_feature">
 
-    <android.support.v4.widget.NestedScrollView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_feature_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <GridView
-            android:id="@+id/grid"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_centerInParent="true"
-            android:cacheColorHint="@null"
-            android:columnWidth="@dimen/_80sdp"
-            android:horizontalSpacing="@dimen/_10sdp"
-            android:listSelector="@null"
-            android:numColumns="auto_fit"
-            android:paddingLeft="@dimen/_16sdp"
-            android:paddingRight="@dimen/_16sdp"
-            android:scrollbarStyle="outsideOverlay"
-            android:stretchMode="columnWidth"/>
-    </android.support.v4.widget.NestedScrollView>
+        android:layout_height="match_parent"
+        android:clickable="true"
+        android:overScrollMode="never"
+        android:paddingLeft="@dimen/_10sdp"
+        android:paddingRight="@dimen/_10sdp"
+        android:scrollbars="none"/>
 
     <TextView
-        android:id="@android:id/empty"
+        android:id="@+id/tv_empty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text="@string/no_apps"/>
+        android:text="@string/no_apps"
+        android:visibility="invisible"/>
 </RelativeLayout>
