--- a/app/src/main/res/layout/item_feature_icon.xml
+++ b/app/src/main/res/layout/item_feature_icon.xml
@@ -22,7 +22,7 @@
   -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:id="@+id/view"
-              android:layout_width="wrap_content"
+              android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:gravity="center_horizontal"
               android:orientation="vertical"
