--- a/app/src/main/res/menu/menu_feature.xml
+++ b/app/src/main/res/menu/menu_feature.xml
@@ -2,9 +2,11 @@
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
       tools:context="com.ppcrong.bletoolbox.FeatureActivity">
+
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never"/>
+        android:id="@+id/action_about"
+        android:orderInCategory="101"
+        app:showAsAction="never"
+        android:title="@string/action_about"/>
+
 </menu>
