--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#0081B7</color>
     <color name="colorAccent">#FF4081</color>
     <color name="featureTitleColor">#939597</color>
+    <color name="bleConnected">#005FFF</color>
 </resources>
