--- a/app/src/main/res/layout/content_csc.xml
+++ b/app/src/main/res/layout/content_csc.xml
@@ -41,7 +41,7 @@
                     android:text="SPEED"/>
 
                 <TextView
-                    android:id="@+id/speed"
+                    android:id="@+id/tv_speed"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:freezesText="true"
@@ -50,7 +50,7 @@
                     android:textSize="36sp"/>
 
                 <TextView
-                    android:id="@+id/speed_unit"
+                    android:id="@+id/tv_speed_unit"
                     android:layout_width="45dp"
                     android:layout_height="match_parent"
                     android:freezesText="true"
@@ -72,7 +72,7 @@
                     android:text="CADENCE"/>
 
                 <TextView
-                    android:id="@+id/cadence"
+                    android:id="@+id/tv_cadence"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:freezesText="true"
@@ -102,7 +102,7 @@
                     android:text="DISTANCE"/>
 
                 <TextView
-                    android:id="@+id/distance"
+                    android:id="@+id/tv_distance"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:freezesText="true"
@@ -111,7 +111,7 @@
                     android:textSize="36sp"/>
 
                 <TextView
-                    android:id="@+id/distance_unit"
+                    android:id="@+id/tv_distance_unit"
                     android:layout_width="45dp"
                     android:layout_height="match_parent"
                     android:freezesText="true"
@@ -133,7 +133,7 @@
                     android:text="TOTAL DISTANCE"/>
 
                 <TextView
-                    android:id="@+id/distance_total"
+                    android:id="@+id/tv_distance_total"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:freezesText="true"
@@ -142,7 +142,7 @@
                     android:textSize="36sp"/>
 
                 <TextView
-                    android:id="@+id/distance_total_unit"
+                    android:id="@+id/tv_distance_total_unit"
                     android:layout_width="45dp"
                     android:layout_height="match_parent"
                     android:freezesText="true"
@@ -164,7 +164,7 @@
                     android:text="GEAR RATIO"/>
 
                 <TextView
-                    android:id="@+id/ratio"
+                    android:id="@+id/tv_ratio"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginRight="45dp"
