--- a/app/src/main/res/drawable/ic_feature_bg.xml
+++ b/app/src/main/res/drawable/ic_feature_bg.xml
@@ -20,9 +20,17 @@
   ~ ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE
   ~ USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
   -->
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    android:color="#0081b7" >
 
-    <item android:drawable="@drawable/ic_feature_bg_p" android:state_pressed="true"/>
-    <item android:drawable="@drawable/ic_feature_bg_n"/>
+    <item>
+        <shape xmlns:android="http://schemas.android.com/apk/res/android" >
+            <corners android:radius="10dp" />
 
-</selector>
+            <solid android:color="#FF0099da" />
+            
+            <size android:width="24dp" android:height="24dp"/>
+        </shape>
+    </item>
+
+</ripple>
