--- a/app/src/main/res/menu/menu_ahrs.xml
+++ b/app/src/main/res/menu/menu_ahrs.xml
@@ -9,7 +9,7 @@
         app:showAsAction="always"/>
     <item
         android:id="@+id/action_ahrs_demo"
-        android:icon="@drawable/ic_menu_ahrs_demo"
+        android:icon="@drawable/ic_menu_unity"
         android:orderInCategory="100"
         android:title="@string/action_ahrs_demo"
         app:showAsAction="always"/>
