--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,10 @@
     <color name="yellow">#FFFF00</color>
     <color name="accent">#5d8e24</color>
     <color name="tableBackground">#E6E7E8</color>
+    <color name="lighter_gray">#eee</color>
+    <color name="sora">#58B2DC</color>
+    <color name="gray">#808080</color>
+    <color name="darkgray">#A9A9A9</color>
+    <color name="dimgray">#696969</color>
+    <color name="deepskyblue">#00BFFF</color>
 </resources>
