--- a/app/src/main/res/layout/content_ble_base_info.xml
+++ b/app/src/main/res/layout/content_ble_base_info.xml
@@ -3,73 +3,79 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/yellow">
+    android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:orientation="vertical">
+        android:background="@color/yellow">
 
-        <TextView
-            android:id="@+id/tv_ble_device"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/_6sdp"
-            android:text="@string/not_available_value"
-            android:textColor="@color/accent"
-            android:textSize="@dimen/_12sdp"
-            android:textStyle="bold"/>
-
-        <TextView
-            android:id="@+id/tv_rx_ble_connection_state"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingBottom="@dimen/_6sdp"
-            android:paddingLeft="@dimen/_6sdp"
-            android:paddingRight="@dimen/_6sdp"
-            android:text="@string/not_available_value"
-            android:textColor="@color/accent"
-            android:textSize="@dimen/_12sdp"
-            android:textStyle="bold"/>
-
-        <TextView
-            android:id="@+id/tv_rx_ble_error"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingBottom="@dimen/_6sdp"
-            android:paddingLeft="@dimen/_6sdp"
-            android:paddingRight="@dimen/_6sdp"
-            android:text="@string/not_available_value"
-            android:textColor="@color/accent"
-            android:textSize="@dimen/_12sdp"
-            android:textStyle="bold"
-            android:visibility="gone"/>
-
-    </LinearLayout>
-
-    <RelativeLayout
-        android:id="@+id/container_battery"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_marginRight="@dimen/_10sdp">
-
-        <ImageView
-            android:layout_width="@dimen/_30sdp"
-            android:layout_height="@dimen/_30sdp"
-            android:layout_centerInParent="true"
-            android:rotation="-90"
-            android:src="@drawable/battery"/>
-
-        <TextView
-            android:id="@+id/tv_battery"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:paddingLeft="@dimen/_2sdp"
-            android:text="@string/not_available_value"
-            android:textColor="#FFFFFF"
-            android:textSize="@dimen/_10sdp"
-            android:textStyle="bold"/>
-    </RelativeLayout>
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tv_ble_device"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/_6sdp"
+                android:text="@string/not_available_value"
+                android:textColor="@color/accent"
+                android:textSize="@dimen/_12sdp"
+                android:textStyle="bold"/>
+
+            <TextView
+                android:id="@+id/tv_rx_ble_connection_state"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="@dimen/_6sdp"
+                android:paddingRight="@dimen/_6sdp"
+                android:paddingBottom="@dimen/_6sdp"
+                android:text="@string/not_available_value"
+                android:textColor="@color/accent"
+                android:textSize="@dimen/_12sdp"
+                android:textStyle="bold"/>
+
+        </LinearLayout>
+
+        <RelativeLayout
+            android:id="@+id/container_battery"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginRight="@dimen/_10sdp">
+
+            <ImageView
+                android:layout_width="@dimen/_30sdp"
+                android:layout_height="@dimen/_30sdp"
+                android:layout_centerInParent="true"
+                android:rotation="-90"
+                android:src="@drawable/battery"/>
+
+            <TextView
+                android:id="@+id/tv_battery"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:paddingLeft="@dimen/_2sdp"
+                android:text="@string/not_available_value"
+                android:textColor="#FFFFFF"
+                android:textSize="@dimen/_10sdp"
+                android:textStyle="bold"/>
+        </RelativeLayout>
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/tv_rx_ble_error"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/lighter_green"
+        android:padding="@dimen/_6sdp"
+        android:text="@string/not_available_value"
+        android:textColor="@color/colorAccent"
+        android:textSize="@dimen/_12sdp"
+        android:textStyle="bold"
+        android:visibility="gone"/>
+
 </LinearLayout>
