--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -1,34 +1,24 @@
+<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:aapt="http://schemas.android.com/aapt"
         android:width="108dp"
         android:height="108dp"
-        android:viewportHeight="108"
-        android:viewportWidth="108">
-    <path
-        android:fillType="evenOdd"
-        android:pathData="M32,64C32,64 38.39,52.99 44.13,50.95C51.37,48.37 70.14,49.57 70.14,49.57L108.26,87.69L108,109.01L75.97,107.97L32,64Z"
-        android:strokeColor="#00000000"
-        android:strokeWidth="1">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="78.5885"
-                android:endY="90.9159"
-                android:startX="48.7653"
-                android:startY="61.0927"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0"/>
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0"/>
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M66.94,46.02L66.94,46.02C72.44,50.07 76,56.61 76,64L32,64C32,56.61 35.56,50.11 40.98,46.06L36.18,41.19C35.45,40.45 35.45,39.3 36.18,38.56C36.91,37.81 38.05,37.81 38.78,38.56L44.25,44.05C47.18,42.57 50.48,41.71 54,41.71C57.48,41.71 60.78,42.57 63.68,44.05L69.11,38.56C69.84,37.81 70.98,37.81 71.71,38.56C72.44,39.3 72.44,40.45 71.71,41.19L66.94,46.02ZM62.94,56.92C64.08,56.92 65,56.01 65,54.88C65,53.76 64.08,52.85 62.94,52.85C61.8,52.85 60.88,53.76 60.88,54.88C60.88,56.01 61.8,56.92 62.94,56.92ZM45.06,56.92C46.2,56.92 47.13,56.01 47.13,54.88C47.13,53.76 46.2,52.85 45.06,52.85C43.92,52.85 43,53.76 43,54.88C43,56.01 43.92,56.92 45.06,56.92Z"
-        android:strokeColor="#00000000"
-        android:strokeWidth="1"/>
+        android:viewportWidth="837.8182"
+        android:viewportHeight="837.8182">
+    <group
+        android:translateX="162.90909"
+        android:translateY="162.90909">
+
+        <path
+            android:fillColor="#44C4FC"
+            android:pathData="M 256 0 C 397.384895957 0 512 114.615104043 512 256 C 512 397.384895957 397.384895957 512 256 512 C 114.615104043 512 0 397.384895957 0 256 C 0 114.615104043 114.615104043 0 256 0 Z"/>
+        <path
+            android:fillColor="#29ACE5"
+            android:pathData="M511.866,263.927L349.548,101.608l-10.813,116.74l-142.73-142.73l-34.817,197.061l128.533,128.533 l-93.55,103.741l0,0C215.367,509.55,235.396,512,256,512C394.732,512,507.676,401.642,511.866,263.927z"/>
+        <path
+            android:fillColor="#1E499E"
+            android:pathData="M315.994,75.618l0.001,135.297h-119.99l-0.001-135.297c-40.019,21.441-67.247,63.646-67.246,112.222 c0,48.642,27.304,90.894,67.412,112.306l0.001,204.808C215.367,509.55,235.396,512,256,512c20.605,0,40.635-2.451,59.831-7.048 l-0.001-204.806c40.108-21.413,67.412-63.664,67.411-112.306C383.241,139.264,356.013,97.059,315.994,75.618z"/>
+        <path
+            android:fillColor="#0E387C"
+            android:pathData="M383.242,187.84c0-48.576-27.229-90.781-67.247-112.222l0.001,135.297h-60.043V512 c0.016,0,0.032,0,0.048,0c20.605,0,40.635-2.451,59.831-7.048l-0.001-204.806C355.938,278.734,383.242,236.483,383.242,187.84z"/>
+    </group>
 </vector>
