--- a/app/src/main/res/menu/menu_base.xml
+++ b/app/src/main/res/menu/menu_base.xml
@@ -1,5 +1,5 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto" >
+      xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/action_ble_scan"
@@ -10,7 +10,8 @@
     <item
         android:id="@+id/action_about"
         android:orderInCategory="101"
-        app:showAsAction="never"
-        android:title="@string/action_about"/>
+        android:title="@string/action_about"
+        android:visible="false"
+        app:showAsAction="never"/>
 
 </menu>
