--- a/app/src/main/res/menu/menu_feature.xml
+++ b/app/src/main/res/menu/menu_feature.xml
@@ -6,7 +6,8 @@
     <item
         android:id="@+id/action_about"
         android:orderInCategory="101"
-        app:showAsAction="never"
-        android:title="@string/action_about"/>
+        android:title="@string/action_about"
+        android:visible="false"
+        app:showAsAction="never"/>
 
 </menu>
