--- a/app/src/main/res/layout/fragment_feature_uart_log.xml
+++ b/app/src/main/res/layout/fragment_feature_uart_log.xml
@@ -12,7 +12,8 @@
         android:divider="@null"
         android:dividerHeight="0dp"
         android:paddingLeft="8dp"
-        android:paddingRight="8dp"/>
+        android:paddingRight="8dp"
+        android:scrollbars="vertical"/>
 
     <TextView
         android:id="@+id/tv_empty"
