--- a/app/src/main/res/values/styles_other.xml
+++ b/app/src/main/res/values/styles_other.xml
@@ -20,7 +20,7 @@
 
     <!-- Style used by the Toolbar -->
     <style name="ActionBarThemeOverlay" parent="@style/ThemeOverlay.AppCompat.ActionBar">
-        <item name="android:textColorPrimary">#fff</item>
+        <item name="android:textColorPrimary">#000</item>
         <item name="android:textColorSecondary">#8fff</item>
         <item name="colorControlNormal">#fff</item>
         <item name="colorControlHighlight">#3fff</item>
