--- a/app/src/main/res/menu/menu_base.xml
+++ b/app/src/main/res/menu/menu_base.xml
@@ -8,8 +8,13 @@
         android:title="@string/action_scan_device"
         app:showAsAction="always"/>
     <item
-        android:id="@+id/action_about"
+        android:id="@+id/action_settings"
         android:orderInCategory="101"
+        android:title="@string/action_settings"
+        app:showAsAction="never"/>
+    <item
+        android:id="@+id/action_about"
+        android:orderInCategory="102"
         android:title="@string/action_about"
         android:visible="false"
         app:showAsAction="never"/>
