--- a/app/src/main/res/menu/menu_ota.xml
+++ b/app/src/main/res/menu/menu_ota.xml
@@ -12,4 +12,9 @@
         android:orderInCategory="100"
         android:title="@string/ota_stress_test"
         android:visible="false"/>
+    <item
+        android:id="@+id/action_about"
+        android:orderInCategory="100"
+        android:title="@string/action_about"
+        app:showAsAction="never"/>
 </menu>
