--- a/app/src/main/res/values/strings_ahrs.xml
+++ b/app/src/main/res/values/strings_ahrs.xml
@@ -4,4 +4,5 @@
     <string name="ahrs_section_ahrs_header">AHRS</string>
 
     <string name="action_ahrs_demo">AHRS Demo</string>
+    <string name="ahrs_about_text">AHRS Demo</string>
 </resources>
