--- a/app/src/main/res/layout/content_bpm.xml
+++ b/app/src/main/res/layout/content_bpm.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".csc.CscActivity"
+    tools:context=".bpm.BpmActivity"
     tools:showIn="@layout/activity_bpm">
 
     <include layout="@layout/content_ble_base_info"/>
