--- a/app/src/main/res/layout/content_ota.xml
+++ b/app/src/main/res/layout/content_ota.xml
@@ -155,4 +155,30 @@
             android:freezesText="true"
             android:visibility="invisible"/>
     </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_16sdp"
+        android:background="@color/sora"
+        android:gravity="center_horizontal"
+        android:text="@string/ota_result"
+        android:textAllCaps="true"
+        android:textColor="#FFFFFF"
+        android:textSize="@dimen/_12sdp"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/lighter_gray"
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/tv_result"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/_8sdp"
+            android:freezesText="true"/>
+    </LinearLayout>
 </LinearLayout>
